--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 </head>
 
 <body>
+    <div id="wrapper">
+        <div id="layoutContainer"></div>
+    </div>
+
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="https://golden-layout.com/files/latest/js/goldenlayout.min.js"></script>
     <script type="text/javascript" src="main.js"></script>
-    <script type="text/javascript" src="embed/embed_content.js"></script>
 </body>
