--- a/embed/pdfjs-latest/web/viewer.html
+++ b/embed/pdfjs-latest/web/viewer.html
@@ -248,7 +248,7 @@ See https://github.com/adobe-type-tools/cmap-resources
                 <span data-l10n-id="presentation_mode_label">Presentation Mode</span>
               </button>
 
-              <button id="openFile" class="toolbarButton openFile hiddenLargeView" title="Open File" tabindex="32"
+              <button id="openFile" class="toolbarButton openFile" title="Open File" tabindex="32"
                 data-l10n-id="open_file">
                 <span data-l10n-id="open_file_label">Open</span>
               </button>
