--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link type="text/css" rel="stylesheet" href="https://golden-layout.com/files/latest/css/goldenlayout-base.css" />
     <link type="text/css" rel="stylesheet" <!--
         href="https://golden-layout.com/files/latest/css/goldenlayout-light-theme.css" />
+    <link type="text/css" rel="stylesheet" href="style.css" />
 </head>
 
 <body>
