--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf8">
     <title>demo</title>
     <link type="text/css" rel="stylesheet" href="https://golden-layout.com/files/latest/css/goldenlayout-base.css" />
-    <link type="text/css" rel="stylesheet" <!--
+    <link type="text/css" rel="stylesheet"
         href="https://golden-layout.com/files/latest/css/goldenlayout-light-theme.css" />
     <link type="text/css" rel="stylesheet" href="style.css" />
 </head>
@@ -15,7 +15,7 @@
         <div id="layoutContainer"></div>
     </div>
 
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="https://golden-layout.com/files/latest/js/goldenlayout.min.js"></script>
     <script type="text/javascript" src="main.js"></script>
 </body>
