--- a/src/pdfjs/web/viewer.html
+++ b/src/pdfjs/web/viewer.html
@@ -1,23 +1,17 @@
 <!DOCTYPE html>
 <!--
 Copyright 2012 Mozilla Foundation
-
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at
-
     http://www.apache.org/licenses/LICENSE-2.0
-
 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-
 Adobe CMap resources are covered by their own copyright but the same license:
-
     Copyright 1990-2015 Adobe Systems Incorporated.
-
 See https://github.com/adobe-type-tools/cmap-resources
 -->
 <html dir="ltr" mozdisallowselectionprint>
@@ -248,10 +242,6 @@ See https://github.com/adobe-type-tools/cmap-resources
                 <span data-l10n-id="presentation_mode_label">Presentation Mode</span>
               </button>
 
-              <button id="openFile" class="toolbarButton openFile" title="Open File" tabindex="32"
-                data-l10n-id="open_file">
-                <span data-l10n-id="open_file_label">Open</span>
-              </button>
 
               <button id="print" class="toolbarButton print hiddenMediumView" title="Print" tabindex="33"
                 data-l10n-id="print">
@@ -337,6 +327,10 @@ See https://github.com/adobe-type-tools/cmap-resources
 
       <div id="viewerContainer" tabindex="0">
         <div id="viewer" class="pdfViewer"></div>
+        <button id="openFile" class="toolbarButton openFile" title="Open File" tabindex="32" data-l10n-id="open_file">
+          <span data-l10n-id="open_file_label"></span>
+          <label id="custom-css-open-file-label">Choose File</label>
+        </button>
       </div>
 
       <div id="errorWrapper" hidden='true'>
