delete save state functional & add confirm reload notification

--- a/src/pdfjs/web/viewer.html
+++ b/src/pdfjs/web/viewer.html
@@ -34,6 +34,7 @@ See https://github.com/adobe-type-tools/cmap-resources
 
 
   <script src="viewer.js"></script>
+  <script src="custom.js"></script>
 
 </head>
 
@@ -327,8 +328,8 @@ See https://github.com/adobe-type-tools/cmap-resources
 
       <div id="viewerContainer" tabindex="0">
         <div id="viewer" class="pdfViewer"></div>
-        <button id="openFile" class="toolbarButton openFile" title="Open File" tabindex="32" data-l10n-id="open_file">
-          <span data-l10n-id="open_file_label"></span>
+        <button id="openFile" class="toolbarButton openFile" title="" tabindex="32" data-l10n-id="open_file">
+          <!-- <span data-l10n-id="open_file_label"></span> -->
           <label id="custom-css-open-file-label">Choose File</label>
         </button>
       </div>
